tests/NormalTests/paczka1/fuzzy1/66049695.err
Error in line 1: S113 A265 32,9
Error in line 4: ZtN9mM S113 14,3
Error in line 14: USwOcBMWEE A52 2,8
Error in line 13: ZtN9mM A52 71,2
Error in line 23: LxTn A265 22,1
